--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://",
     "name": "Dead Coin",
-    "iconUrl": "https://icon.png"
+    "iconUrl": "https://raw.githubusercontent.com/wesmorelloess/test_1/main/icon_120.png"
 }
